--- a/app/nossas/design/static/design/scss/nossas.scss
+++ b/app/nossas/design/static/design/scss/nossas.scss
@@ -553,7 +553,8 @@ $carousel-control-next-icon-bg: url("data:image/svg+xml,<svg width='41' height='
 // Headline
 .headline {
     position: relative;
-    height: 5rem;
+    height: 72px;
+    margin-bottom: 32px;
 }
 
 .headline-content {
@@ -568,7 +569,7 @@ $carousel-control-next-icon-bg: url("data:image/svg+xml,<svg width='41' height='
 }
 
 .headline img {
-    margin-right: 1.5rem;
+    margin-right: 23px;
 }
 
 @include media-breakpoint-down(lg) {
